force-app/main/default/objects/Application_Template__c/fields/Accredited_Status__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Status__c</fullName>
    <label>Accredited Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited</fullName>
            </value>
            <value>
                <fullName>Non-Accredited</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>