force-app/main/default/objects/Application_Template__c/fields/Already_Registered__c.field-meta.xml
<CustomField>
    <fullName>Already_Registered__c</fullName>
    <inlineHelpText>Registered For The Membership Type Specified On This Template</inlineHelpText>
    <label>Already Registered With NSCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>