force-app/main/default/objects/Application_Template__c/fields/Bridging_Program__c.field-meta.xml
<CustomField>
    <fullName>Bridging_Program__c</fullName>
    <label>Bridging Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>