force-app/main/default/objects/Application_Template__c/fields/Graduated__c.field-meta.xml
<CustomField>
    <fullName>Graduated__c</fullName>
    <label>Graduated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>