force-app/main/default/objects/Application_Template__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Streamlined</fullName>
            </value>
            <value>
                <fullName>Non-Streamlined</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
                <isActive>false</isActive>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>Non-Eligible</fullName>
                <isActive>false</isActive>
                <label>Non-Eligible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>