force-app/main/default/objects/Application_Template__c/fields/PACA__c.field-meta.xml
<CustomField>
    <fullName>PACA__c</fullName>
    <label>PACA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>