force-app/main/default/objects/Application_Template__c/fields/Permit_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Permit_Transfer__c</fullName>
    <label>Permit Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>