force-app/main/default/objects/Application_Template__c/fields/Previously_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Licensed__c</fullName>
    <inlineHelpText>For resumption applications</inlineHelpText>
    <label>Previously Licensed With NSCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>