force-app/main/default/objects/Application_Template__c/fields/Required_Completion_Licensure_Requiremen__c.field-meta.xml
<CustomField>
    <fullName>Required_Completion_Licensure_Requiremen__c</fullName>
    <inlineHelpText>Is it required for licensure requirements to be complete for a user to see this application?</inlineHelpText>
    <label>Licensure Requirements Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>