force-app/main/default/objects/Application_Template__c/fields/Resumption_Application__c.field-meta.xml
<CustomField>
    <fullName>Resumption_Application__c</fullName>
    <label>Resumption Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>