force-app/main/default/objects/Application_Template__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>