force-app/main/default/objects/Application_Template__c/listViews/Exam_Applications.listView-meta.xml
<ListView>
    <fullName>Exam_Applications</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>User_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Exam</value>
    </filters>
    <label>Exam Applications</label>
</ListView>