force-app/main/default/objects/Application_Template__c/listViews/Injection_Permits.listView-meta.xml
<ListView>
    <fullName>Injection_Permits</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <columns>User_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Injection</value>
    </filters>
    <label>Injection Permits</label>
</ListView>