force-app/main/default/objects/Application_Template__c/listViews/Pharmacy_Applications.listView-meta.xml
<ListView>
    <fullName>Pharmacy_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Group__c</field>
        <operation>equals</operation>
        <value>Pharmacy</value>
    </filters>
    <label>Pharmacy Applications</label>
</ListView>