force-app/main/default/objects/Application_Template__c/listViews/Pharmacy_Technician_Candidat_Apps.listView-meta.xml
<ListView>
    <fullName>Pharmacy_Technician_Candidat_Apps</fullName>
    <columns>NAME</columns>
    <columns>Application_Name__c</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Group__c</field>
        <operation>includes</operation>
        <value>Candidate</value>
    </filters>
    <label>Pharmacy Technician Candidate Apps</label>
</ListView>