force-app/main/default/objects/Application_Template__c/listViews/Student_Applications.listView-meta.xml
<ListView>
    <fullName>Student_Applications</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Group__c</field>
        <operation>includes</operation>
        <value>Student</value>
    </filters>
    <label>Student Applications</label>
</ListView>